首頁slider半透明遮罩

--- a/index.html
+++ b/index.html
@@ -164,40 +164,16 @@
 			<section class="section-hero hero-1 max-width">
 				<div id="heroSlider" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="6000">  <!--    -->
 					
-					<!-- <div class="carousel-indicators">
-						<div class="d-flex align-items-center gap-3 gap-lg-1 lh-1 active" data-bs-target="#heroSlider" data-bs-slide-to="0" aria-current="true">
-							<span class="indecators-item display-4 fw-extra-bold mb-0">01</span>
-							<span class="indecators-description fw-medium mb-0">桃城蒔菜<br>尤優佳</span>
-						</div>
-						<div class="d-flex align-items-center gap-3 gap-lg-1 lh-1" data-bs-target="#heroSlider" data-bs-slide-to="1">
-							<span class="indecators-item display-4 fw-extra-bold mb-0">02</span>
-							<span class="indecators-description fw-medium mb-0">奇步應用<br>陳佳新／謝宜伶</span>
-						</div>
-						<div class="d-flex align-items-center gap-3 gap-lg-1 lh-1" data-bs-target="#heroSlider" data-bs-slide-to="2">
-							<span class="indecators-item display-4 fw-extra-bold mb-0">03</span>
-							<span class="indecators-description fw-medium mb-0">蒔煦文化創意<br>鍾汯佑</span>
-						</div>
-						<div class="d-flex align-items-center gap-3 gap-lg-1 lh-1" data-bs-target="#heroSlider" data-bs-slide-to="2">
-							<span class="indecators-item display-4 fw-extra-bold mb-0">04</span>
-							<span class="indecators-description fw-medium mb-0">可可雅米<br>鍾孝勇／林小蕎</span>
-						</div>
-						<div class="d-flex align-items-center gap-3 gap-lg-1 lh-1" data-bs-target="#heroSlider" data-bs-slide-to="2">
-							<span class="indecators-item display-4 fw-extra-bold mb-0">05</span>
-							<span class="indecators-description fw-medium mb-0">向天歌創新農業／鵝鋪子<br>蔡英地</span>
-						</div>
-						<div class="d-flex align-items-center gap-3 gap-lg-1 lh-1" data-bs-target="#heroSlider" data-bs-slide-to="2">
-							<span class="indecators-item display-4 fw-extra-bold mb-0">06</span>
-							<span class="indecators-description fw-medium mb-0">微醺農場<br>黃衍勳</span>
-						</div>
-					</div> -->
-					<!-- carousel-indicators -->
-					<div class="carousel-inner">
+
+					<div class="carousel-inner carousel-inner-opslider">
 						<div class="carousel-item active">					
 							<picture>		
 								<source media="(max-width:500px)" srcset="assets/images/hero-1-sm.jpg">				
 								<source media="(max-width:768px)" srcset="assets/images/hero-1-md.jpg">				
 								<img src="assets/images/hero-1.jpg" alt="hero-image">
 							</picture>
+							<!-- 加上遮罩層 -->
+							<div class="overlay"></div>
 							<div>
 								<div class="carousel-captions">
 									<div class="container">		
@@ -207,7 +183,7 @@
 												<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">桃城蒔菜</text></svg>
 											</h1>
 											<div class="architronix-button">
-												<a href="people-02.html" class="btn btn-outline-primary gap-10">Explore
+												<a href="2024/people-02.html" class="btn btn-outline-primary gap-10">Explore
 													<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/></svg>																														
 												</a>
@@ -223,6 +199,8 @@
 								<source media="(max-width:768px)" srcset="assets/images/hero-2-md.jpg">				
 								<img src="assets/images/hero-2.jpg" alt="hero-image">
 							</picture> 
+							<!-- 加上遮罩層 -->
+							<div class="overlay"></div>
 							<div class="carousel-captions">
 								<div class="container">		
 									<div class="content-text text-start">
@@ -231,7 +209,7 @@
 											<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">奇步應用</text></svg>
 										</h1>
 										<div class="architronix-button">
-											<a href="people-03.html" class="btn btn-outline-primary  gap-10">Explore							
+											<a href="2024/people-03.html" class="btn btn-outline-primary  gap-10">Explore							
 												<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 												</svg>							
@@ -247,6 +225,8 @@
 								<source media="(max-width:768px)" srcset="assets/images/hero-3-md.jpg">				
 								<img src="assets/images/hero-3.jpg" alt="hero-image">
 							</picture> 
+							<!-- 加上遮罩層 -->
+							<div class="overlay"></div>
 							<div class="carousel-captions">
 								<div class="container">		
 									<div class="content-text text-start">
@@ -255,7 +235,7 @@
 											<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">蒔煦文化創意</text></svg>
 										</h1>
 										<div class="architronix-button">
-											<a href="people-01.html" class="btn btn-outline-primary  gap-10">Explore							
+											<a href="2024/people-01.html" class="btn btn-outline-primary  gap-10">Explore							
 												<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 												</svg>							
@@ -271,6 +251,8 @@
 								<source media="(max-width:768px)" srcset="assets/images/hero-4-md.jpg">				
 								<img src="assets/images/hero-4.jpg" alt="hero-image">
 							</picture> 
+							<!-- 加上遮罩層 -->
+							<div class="overlay"></div>
 							<div class="carousel-captions">
 								<div class="container">		
 									<div class="content-text text-start">
@@ -279,7 +261,7 @@
 											<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">可可雅米</text></svg>
 										</h1>
 										<div class="architronix-button">
-											<a href="people-04.html" class="btn btn-outline-primary  gap-10">Explore							
+											<a href="2024/people-04.html" class="btn btn-outline-primary  gap-10">Explore							
 												<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 												</svg>							
@@ -295,6 +277,8 @@
 								<source media="(max-width:768px)" srcset="assets/images/hero-5-md.jpg">				
 								<img src="assets/images/hero-5.jpg" alt="hero-image">
 							</picture> 
+							<!-- 加上遮罩層 -->
+							<div class="overlay"></div>
 							<div class="carousel-captions">
 								<div class="container">		
 									<div class="content-text text-start">
@@ -303,7 +287,7 @@
 											<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">向天歌創新農業／鵝鋪子</text></svg>
 										</h1>
 										<div class="architronix-button">
-											<a href="people-05.html" class="btn btn-outline-primary  gap-10">Explore							
+											<a href="2024/people-05.html" class="btn btn-outline-primary  gap-10">Explore							
 												<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 												</svg>							
@@ -319,6 +303,8 @@
 								<source media="(max-width:768px)" srcset="assets/images/hero-6-md.jpg">				
 								<img src="assets/images/hero-6.jpg" alt="hero-image">
 							</picture> 
+							<!-- 加上遮罩層 -->
+							<div class="overlay"></div>
 							<div class="carousel-captions">
 								<div class="container">		
 									<div class="content-text text-start">
@@ -327,7 +313,7 @@
 											<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">微醺農場</text></svg>
 										</h1>
 										<div class="architronix-button">
-											<a href="people-06.html" class="btn btn-outline-primary  gap-10">Explore							
+											<a href="2024/people-06.html" class="btn btn-outline-primary  gap-10">Explore							
 												<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 												</svg>							
@@ -602,7 +588,7 @@
 										</div>
 										<div class="blog-details">
 											<p>2025.01.24 / 文化創意</p>
-											<h5 class="blog-title fs-5 fw-semibold"><a href="people-01.html" class="link-hover-animation-1 stretched-link text-decoration-none">為大地種下溫暖與希望</a></h5>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2024/people-01.html" class="link-hover-animation-1 stretched-link text-decoration-none">為大地種下溫暖與希望</a></h5>
 										</div>
 									</div>									
 								</div>
@@ -614,7 +600,7 @@
 										</div>
 										<div class="blog-details">
 											<p>2025.02.04 / 智慧農業</p>
-											<h5 class="blog-title fs-5 fw-semibold"><a href="people-02.html" class="link-hover-animation-1 stretched-link text-decoration-none">不開花不結果的種菜美學：青農崛起，打造承載三代農業人夢想的共生家園</a></h5>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2024/people-02.html" class="link-hover-animation-1 stretched-link text-decoration-none">不開花不結果的種菜美學：青農崛起，打造承載三代農業人夢想的共生家園</a></h5>
 										</div>
 									</div>									
 								</div>
@@ -626,7 +612,7 @@
 										</div>
 										<div class="blog-details">
 											<p>2025.01.24 / 數位科技</p>
-											<h5 class="blog-title fs-5 fw-semibold"><a href="people-03.html" class="link-hover-animation-1 stretched-link text-decoration-none">讓數位科技成為的橋樑，串起家鄉的美好故事</a></h5>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2024/people-03.html" class="link-hover-animation-1 stretched-link text-decoration-none">讓數位科技成為的橋樑，串起家鄉的美好故事</a></h5>
 										</div>
 									</div>									
 								</div>
@@ -638,7 +624,7 @@
 										</div>
 										<div class="blog-details">
 											<p>2025.01.24 / 智慧農業</p>
-											<h5 class="blog-title fs-5 fw-semibold"><a href="people-04.html" class="link-hover-animation-1 stretched-link text-decoration-none">越在地越國際的屏東可可夢</a></h5>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2024/people-04.html" class="link-hover-animation-1 stretched-link text-decoration-none">越在地越國際的屏東可可夢</a></h5>
 										</div>
 									</div>									
 								</div>
@@ -650,7 +636,7 @@
 										</div>
 										<div class="blog-details">
 											<p>2025.01.24 / 智慧農業</p>
-											<h5 class="blog-title fs-5 fw-semibold"><a href="people-05.html" class="link-hover-animation-1 stretched-link text-decoration-none">奮身一躍成神農：一場由會計師所發起的農業革新運動</a></h5>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2024/people-05.html" class="link-hover-animation-1 stretched-link text-decoration-none">奮身一躍成神農：一場由會計師所發起的農業革新運動</a></h5>
 										</div>
 									</div>									
 								</div>
@@ -662,7 +648,7 @@
 										</div>
 										<div class="blog-details">
 											<p>2025.01.24 / 智慧農業</p>
-											<h5 class="blog-title fs-5 fw-semibold"><a href="people-06.html" class="link-hover-animation-1 stretched-link text-decoration-none">以科技和熱情復興記憶中的農樂園</a></h5>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2024/people-06.html" class="link-hover-animation-1 stretched-link text-decoration-none">以科技和熱情復興記憶中的農樂園</a></h5>
 										</div>
 									</div>									
 								</div>
