--- a/index.html
+++ b/index.html
@@ -144,6 +144,33 @@
 					<div class="carousel-inner carousel-inner-opslider">
 						<div class="carousel-item active">					
 							<picture>		
+								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-7-sm.jpg">				
+								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-7-md.jpg">				
+								<img src="assets/images/2025/hero/hero-7.jpg" alt="hero-image">
+							</picture>
+							 
+							<div class="overlay"></div>
+							<div>
+								<div class="carousel-captions">
+									<div class="container">		
+										<div class="content-text text-start">
+											<h1 class="stroke-heading display-2 fw-extra-bold d-flex flex-column">
+												<span class="hero-heading animate-fill primary">梁國鴻</span>																								
+												<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">novium</text></svg>
+											</h1>
+											<div class="architronix-button">
+												<a href="2025/people-07.html" class="btn btn-outline-primary gap-10">Explore
+													<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/></svg>																														
+												</a>
+											</div>
+										</div>										
+									</div>
+								</div> 
+							</div>						
+						</div>
+						<div class="carousel-item">					
+							<picture>		
 								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-6-sm.jpg">				
 								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-6-md.jpg">				
 								<img src="assets/images/2025/hero/hero-6.jpg" alt="hero-image">
@@ -390,26 +417,6 @@
 			</section>
 			<!--About Section ======================-->
 
-						<!--Feedback Section ======================-->
-						<!-- <section id="feedback" class="section-feedback text-secondary">
-							<div class="container">
-								<div class="feedback-wrapper position-relative">
-									<div class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
-										<h2 class="fw-extra-bold feedback-title">Icons of Legacy<br><span>風傳媒嚴選 2025 年度人物</span></h2>
-										
-										<div class="architronix-button">
-											<a href="contact-2.html" class="btn btn-secondary gap-10"> 
-												Lets Go
-												<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"></path>
-												</svg>
-											</a>
-										</div>							
-									</div>
-								</div>
-							</div>
-						</section> -->
-						<!--Feedback Section ======================-->
 
 
 			<!--Gallery Section ======================-->
@@ -558,6 +565,17 @@
 						<div class="swiper blog-swiper">
 							<div class="swiper-wrapper"> 
 								<!-- 2025 -->
+								<div class="swiper-slide">
+									<div class="blog-wrapper">
+										<div class="blog-image">
+											<img src="assets/images/2025/blog/blog-image-7.jpg" class="img-fluid" alt="img">
+										</div>
+										<div class="blog-details">
+											<p>2025.06.16 / 設計</p>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2025/people-07.html" class="link-hover-animation-1 stretched-link text-decoration-none">記得仰望星空：一支傾斜23.5 度的磁浮筆，讓世界認得來自台灣的設計</a></h5>
+										</div>
+									</div>									
+								</div>
 								<div class="swiper-slide">
 									<div class="blog-wrapper">
 										<div class="blog-image">
