青農、智食良果

--- a/index.html
+++ b/index.html
@@ -144,6 +144,61 @@
 
 						<div class="carousel-item active">					
 							<picture>		
+								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-15-sm.jpg">				
+								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-15-md.jpg">				
+								<img src="assets/images/2025/hero/hero-15.jpg" alt="hero-image">
+							</picture>
+							 
+							<div class="overlay"></div>
+							<div>
+								<div class="carousel-captions">
+									<div class="container">		
+										<div class="content-text text-start">
+											<h1 class="stroke-heading display-2 fw-extra-bold d-flex flex-column">
+												<span class="hero-heading animate-fill primary">許書賓</span>																								
+												<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">青農</text></svg>
+											</h1>
+											<div class="architronix-button">
+												<a href="2025/people-15.html" class="btn btn-outline-primary gap-10">Explore
+													<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/></svg>																														
+												</a>
+											</div>
+										</div>										
+									</div>
+								</div> 
+							</div>						
+						</div>
+						<div class="carousel-item">					
+							<picture>		
+								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-14-sm.jpg">				
+								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-14-md.jpg">				
+								<img src="assets/images/2025/hero/hero-14.jpg" alt="hero-image">
+							</picture>
+							 
+							<div class="overlay"></div>
+							<div>
+								<div class="carousel-captions">
+									<div class="container">		
+										<div class="content-text text-start">
+											<h1 class="stroke-heading display-2 fw-extra-bold d-flex flex-column">
+												<span class="hero-heading animate-fill primary">吳昱鋒</span>																								
+												<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">智食良果</text></svg>
+											</h1>
+											<div class="architronix-button">
+												<a href="2025/people-14.html" class="btn btn-outline-primary gap-10">Explore
+													<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/></svg>																														
+												</a>
+											</div>
+										</div>										
+									</div>
+								</div> 
+							</div>						
+						</div>
+
+						<div class="carousel-item">					
+							<picture>		
 								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-13-sm.jpg">				
 								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-13-md.jpg">				
 								<img src="assets/images/2025/hero/hero-13.jpg" alt="hero-image">
@@ -602,6 +657,29 @@
 						<div class="swiper blog-swiper">
 							<div class="swiper-wrapper"> 
 								<!-- 2025 -->
+								<div class="swiper-slide">
+									<div class="blog-wrapper">
+										<div class="blog-image">
+											<img src="assets/images/2025/blog/blog-image-15.jpg" class="img-fluid" alt="img">
+										</div>
+										<div class="blog-details">
+											<p>2025.09.18 / 農業</p>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2025/people-15.html" class="link-hover-animation-1 stretched-link text-decoration-none">從消防工程到與熊蜂為伍：許書賓夫婦返鄉「農」十年，重拾自在新生活</a></h5>
+										</div>
+									</div>									
+								</div>
+								<div class="swiper-slide">
+									<div class="blog-wrapper">
+										<div class="blog-image">
+											<img src="assets/images/2025/blog/blog-image-14.jpg" class="img-fluid" alt="img">
+										</div>
+										<div class="blog-details">
+											<p>2025.09.17 / 農業科技</p>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2025/people-14.html" class="link-hover-animation-1 stretched-link text-decoration-none">智食良果的AI農業實驗，用科技耕耘生活的希望</a></h5>
+										</div>
+									</div>									
+								</div>
+
 								<div class="swiper-slide">
 									<div class="blog-wrapper">
 										<div class="blog-image">
