--- a/index.html
+++ b/index.html
@@ -144,6 +144,62 @@
 
 						<div class="carousel-item active">					
 							<picture>		
+								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-17-sm.jpg">				
+								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-17-md.jpg">				
+								<img src="assets/images/2025/hero/hero-17.jpg" alt="hero-image">
+							</picture>
+							 
+							<div class="overlay"></div>
+							<div>
+								<div class="carousel-captions">
+									<div class="container">		
+										<div class="content-text text-start">
+											<h1 class="stroke-heading display-2 fw-extra-bold d-flex flex-column">
+												<span class="hero-heading animate-fill primary">四人組</span>																								
+												<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">耍廢工廠</text></svg>
+											</h1>
+											<div class="architronix-button">
+												<a href="2025/people-17.html" class="btn btn-outline-primary gap-10">Explore
+													<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/></svg>																														
+												</a>
+											</div>
+										</div>										
+									</div>
+								</div> 
+							</div>						
+						</div>
+
+						<div class="carousel-item">					
+							<picture>		
+								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-16-sm.jpg">				
+								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-16-md.jpg">				
+								<img src="assets/images/2025/hero/hero-16.jpg" alt="hero-image">
+							</picture>
+							 
+							<div class="overlay"></div>
+							<div>
+								<div class="carousel-captions">
+									<div class="container">		
+										<div class="content-text text-start">
+											<h1 class="stroke-heading display-2 fw-extra-bold d-flex flex-column">
+												<span class="hero-heading animate-fill primary">郭能禎</span>																								
+												<svg stroke-width="2" class="text-line display-2 fw-extra-bold z-1"><text x="0%" dominant-baseline="middle" y="70%">番茄方舟</text></svg>
+											</h1>
+											<div class="architronix-button">
+												<a href="2025/people-16.html" class="btn btn-outline-primary gap-10">Explore
+													<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/></svg>																														
+												</a>
+											</div>
+										</div>										
+									</div>
+								</div> 
+							</div>						
+						</div>
+
+						<div class="carousel-item">					
+							<picture>		
 								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-15-sm.jpg">				
 								<source media="(max-width:768px)" srcset="assets/images/2025/hero/hero-15-md.jpg">				
 								<img src="assets/images/2025/hero/hero-15.jpg" alt="hero-image">
@@ -169,6 +225,7 @@
 								</div> 
 							</div>						
 						</div>
+
 						<div class="carousel-item">					
 							<picture>		
 								<source media="(max-width:500px)" srcset="assets/images/2025/hero/hero-14-sm.jpg">				
@@ -657,6 +714,28 @@
 						<div class="swiper blog-swiper">
 							<div class="swiper-wrapper"> 
 								<!-- 2025 -->
+								<div class="swiper-slide">
+									<div class="blog-wrapper">
+										<div class="blog-image">
+											<img src="assets/images/2025/blog/blog-image-17.jpg" class="img-fluid" alt="img">
+										</div>
+										<div class="blog-details">
+											<p>2025.09.23 / 地方創生</p>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2025/people-17.html" class="link-hover-animation-1 stretched-link text-decoration-none">從蛋殼出發打造材料創新　「耍廢工廠」青年返鄉四人組讓耍廢潮起來</a></h5>
+										</div>
+									</div>									
+								</div>
+								<div class="swiper-slide">
+									<div class="blog-wrapper">
+										<div class="blog-image">
+											<img src="assets/images/2025/blog/blog-image-16.jpg" class="img-fluid" alt="img">
+										</div>
+										<div class="blog-details">
+											<p>2025.09.22 / 農業科技</p>
+											<h5 class="blog-title fs-5 fw-semibold"><a href="2025/people-16.html" class="link-hover-animation-1 stretched-link text-decoration-none">雙層玻璃溫室種出品牌，番茄方舟借鑒荷蘭積極攻日本市場</a></h5>
+										</div>
+									</div>									
+								</div>
 								<div class="swiper-slide">
 									<div class="blog-wrapper">
 										<div class="blog-image">
